Discount for inactivity timeout for recording session length.

When session ends because of timeout we should subtract the
waiting time for more accurate session length.

BUG=645538

Review-Url: https://codereview.chromium.org/2326723003
Cr-Commit-Position: refs/heads/master@{#417672}

Former-commit-id: f1abb8e62246a9514974aab9d0b547d570903ef9